<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="clock">Clock</string>
    <string name="clock_align">Clock Date align</string>
    <string name="clock_color">Clock color</string>
    <string name="clock_font">Clock font</string>
    <string name="clock_size">Clock size</string>
    <string name="custom_typeface">Select font file</string>
    <string name="date">Date</string>
    <string name="date_color">Date color</string>
    <string name="date_font">Date font</string>
    <string name="date_size">Date size</string>
    <string name="default_typeface">Kaiti (Default)</string>
    <string name="edit_profile">Edit my profile</string>
    <string name="enable_alarm">Enable alarm</string>
    <string name="enable_profile">Show my profile</string>
    <string name="font_custom">Custom</string>
    <string name="font_system">System</string>
    <string name="keyguard_status_view_myprofile">Galaxy Alpha</string>
    <string name="myprofile">My profile</string>
    <string name="myprofile_align">Align</string>
    <string name="myprofile_font">Font style</string>
    <string name="myprofile_size">Font size</string>
    <string name="select_font_file">Please select font file.</string>
    <string name="set_font_failed">Set font failed.</string>
    <string name="set_font_success">Set font success.</string>
    <string name="swipe_to_unlock">Swipe screen to unlock</string>
    <string name="help_text">Help text</string>
    <string name="other">Other</string>
    <string name="show_help_text">Show help text on lock screen</string>
    <string name="install">Install</string>
    <string name="need_locker_app">This is a theme of %1$s, if you want to use this theme as your lock screen, please install %2$s and then apply this theme</string>
    <string name="battery">Battery</string>
    <string name="battery_font_color">Battery font color</string>
    <string name="battery_font_size">Battery font size</string>
    <string name="enable_battery">Display battery always</string>
    <string name="app_name_galaxy_brilliantring">Galaxy Alpha Brilliant Ring Locker</string>
    <string name="camera_shortcut_summary">Show camera shortcut on right bottom corner</string>
    <string name="enable_camera_shortcut">Enable camera shortcut</string>
    <string name="locker_app_name">X Locker</string>
    <string name="theme_title_galaxy_brilliantring">Galaxy Alpha Brilliant Ring</string>
    <string name="abbrev_wday_abbrev_month_day_no_year">E, MMM d</string>
    <string name="abbrev_wday_day_abbrev_month_no_year">E, d MMM</string>
    <string name="abbrev_wday_month_day_no_year">EEE, MMMM d</string>
    <string name="default_clock_size_factor">1</string>
    <string name="default_date_size_factor">1</string>
    <string name="locker_app_package" translatable="false">com.xlocker.host</string>
</resources>
